# py-fnvhash

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: do-publish-pypi.yml  do-unit-test.yml  on-pull-request.yml  on-push.yml  on-release-do-publish-pypi.yml  on-release.yml
fnvhash/: __init__.py
fnvhash/test/: test_fnv.py  vector.py
